Ya no se permite iniciar una conversación con uno mismo